syntax = "proto3";

package auth;

service AuthService {
  rpc VerifyJWT(TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  string user_id = 1;
  bool is_valid = 2;
}